
* 2017, january, release 0.9.83

    - ptm/pts fix on FreeBSD for interactive shell (ish) and minimum config for the very first run
    - cmds.txt for help and keyboard shortcuts reorganized (better interop with other tools)
    - transparent background added as option
    - started FreeBSD port, make and regexp compatibility changes
    - lineending fixes, robust Backspace key detection
    - some python support, error parser, macros, modified macro run
    - fixes: simple_parser on long lines; man pages in shell buffer (setsid)

* 2015 preparation for the EDA edition "Summer '15 release 0.9.53"
    - frozen, no change except release, Changelog, github upload

* Dec 2014 - Jan 2015 -- cleanup and major redesign, 0.9.47

    - set background process session leader; forward ^D to interactive shell
    - new reload_macros() and show_diff(); changed is_special()
    - make and compiler warning fixes (ino64_t)
    - changed getxline() to read bytes one-by-one
    - new read_stdin() and repeat_search_eng(); better wordwrap in tracemsg();
    - install changes: xeda, DESTDIR again
    - edakeys is not commented out, file generation updated
    - release moved to eda-release repository
    - interactive shell (session) critical fixes, prompt handling finished
    - version 0.9.47 without tag
    - generic LOG update, manuals and docs, design notes, macros
    - tools for easy palette creation, new color sets, output optimization (focus)
    - redesigned resource setting: parse_token()
    - redesigned detecting external change: testaccess()
    - simplified display output, access check on files
    - unified command line parser; run_command() and run_macros() for command and keyb
    - redesigned motion history and bookmarks, tag-jump-to and jump-back-from
    - feature reviews, block folding, regexp handling
    - checks and fixes on buffer overrun, globbing, xterm title
    - coverity scans and fixes (github), minor and important