@@ -119,9 +119,13 @@ KEY_C_LEFT	0x223
 KEY_C_RIGHT	0x232
 KEY_C_PPAGE	0x22D
 KEY_C_NPAGE	0x228
-# mate-terminal (workaround)
+# mate-terminal (FreeBSD 11.0)
 KEY_S_F1	1B 4F 31 3B 32 50
 KEY_S_F2	1B 4F 31 3B 32 51
 KEY_S_F3	1B 4F 31 3B 32 52
 KEY_S_F4	1B 4F 31 3B 32 53
+#KEY_C_F1 hidden
+KEY_C_F2	1B 4F 31 3B 35 51
+KEY_C_F3	1B 4F 31 3B 35 52
+KEY_C_F4	1B 4F 31 3B 35 53
 
