@@ -119,4 +119,13 @@ KEY_C_LEFT	0x221
 KEY_C_RIGHT	0x230
 KEY_C_PPAGE	0x22B
 KEY_C_NPAGE	0x226
+# mate-terminal
+KEY_S_F1	1B 4F 31 3B 32 50
+KEY_S_F2	1B 4F 31 3B 32 51
+KEY_S_F3	1B 4F 31 3B 32 52
+KEY_S_F4	1B 4F 31 3B 32 53
+#KEY_C_F1 hidden
+KEY_C_F2	1B 4F 31 3B 35 51
+KEY_C_F3	1B 4F 31 3B 35 52
+KEY_C_F4	1B 4F 31 3B 35 53
 
